--- a/src/css/select.css
+++ b/src/css/select.css
@@ -2,6 +2,7 @@ html {
     width: 200px;
     background-color: #f0f0f0;
 }
-span.disabled {
-    color: #ddd;
+small {
+    color: #3f3fdf;
+    text-decoration: none;
 }
