--- a/src/css/more.css
+++ b/src/css/more.css
@@ -20,3 +20,9 @@ h4 {
 .clickable:hover {
     text-decoration: underline;
 }
+.yet:before {
+    content: '開発中!';
+    color: #0FABB1;
+    font-size: x-small;
+    font-weight: bold;
+}
