--- a/css/markdown.css
+++ b/css/markdown.css
@@ -2,7 +2,7 @@
  * https://gist.github.com/andyferra/2554919
  */
 body {
-  font-family: Helvetica, arial, sans-serif;
+  /* font-family: Helvetica, arial, sans-serif; */
   font-size: 14px;
   line-height: 1.6;
   padding-top: 10px;
