--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -98,3 +98,9 @@ ul {
   font-size: x-small;
   color: red;
 }
+a.editor {
+  cursor: pointer;
+}
+a.editor:hover {
+  text-decoration: underline;
+}
