--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -6,10 +6,10 @@ html {
     background-color: #f0f0f0;
 }
 ul {
-    padding-left: 10px;
+    padding-left: 7px;
     margin-bottom: 0;
     margin-top: 0;
-    margin-left: 4px;
+    margin-left: 7px;
 }
 
 .boxy {
@@ -22,6 +22,7 @@ ul {
     background-color: #0FABB1;
     */
     font-size: 0.6em;
+    margin-right: 10px;
 }
 
 .list-title {
