--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -73,3 +73,50 @@ s {
     color : #0FABB1;
     cursor: pointer;
 }
+
+.boxy {
+    display: -webkit-box;
+}
+div#announce {
+    width: 400px;
+    /* height: 200px; */
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+}
+#announce-done {
+    position: absolute;
+    font-weight: bold;
+    font-size: x-small;
+    right: 10px;
+    bottom: 10px;
+}
+#announce-img {
+    width: 65px;
+}
+#announce-img>img {
+    width: 60px;
+}
+#announce-txt {
+    width: 335px;
+    font-size: small;
+}
+#announce-contents>h5 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+#announce-contents>ul {
+    margin: 0;
+    font-size: x-small;
+}
+
+div.modal {
+    width: auto;
+    height: auto;
+    background-color: black;
+    z-index: 2;
+    -webkit-opacity: 0.8;
+    position: fixed;
+    left: 10px;
+    top: 10px;
+}
