--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -144,17 +144,11 @@ textarea {
 }
 
 .modal {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    color: #eee;
-    opacity: 0.9;
+    /* さらば加賀さん(´；ω；｀)
     background-image : url("../img/kagasan.face.png");
     background-repeat: no-repeat;
     background-position: bottom left;
+    */
 }
 .modal-contents {
     position: relative;
