--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -15,6 +15,9 @@ h4 {
     margin-bottom: 0;
     margin-top: 30px;
 }
+a.light {
+    color: #00cccc;
+}
 .notice {
     text-decoration: underline;
 }
