--- a/src/css/capture.css
+++ b/src/css/capture.css
@@ -18,6 +18,7 @@ ul#tool-list>ul.selected {
 .clickable {
     cursor: pointer;
 }
-.tool-config {
+/* .tool-config {*/
+label {
     margin-right: 20px;
 }
