Normal mode is not so bad :)

--- a/src/css/select.css
+++ b/src/css/select.css
@@ -149,7 +149,9 @@ time {
     border: dashed #aaa 1px;
     font-size: small;
     margin: 10px auto;
+    /*
     opacity: 0.6;
+    */
 }
 #hide-launch {
     margin-right: 6px;
