--- a/src/css/capture.css
+++ b/src/css/capture.css
@@ -29,3 +29,13 @@ button.plain {
 img.file-action {
     width: 24px;
 }
+a.tweeted-permalink {
+    margin-top: 5px;
+    font-size: small;
+    text-decoration: none;
+    font-weight: bold;
+    color: #33ccff;
+}
+.tweeted-permalink:hover {
+    color: #49afcd;
+}
