--- a/src/css/capture.css
+++ b/src/css/capture.css
@@ -39,3 +39,26 @@ a.tweeted-permalink {
 .tweeted-permalink:hover {
     color: #49afcd;
 }
+@-webkit-keyframes loading {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+.loader {
+    -webkit-animation-name: loading;
+    -webkit-animation-duration: 0.8s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    border-left: thin solid #aaa;
+    border-top: thin solid #aaa;
+    border-right: thin solid #aaa;
+    border-bottom: thin solid #f0f0f0;
+    border-radius: 20px;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    padding: 0;
+}
