--- a/src/css/select.css
+++ b/src/css/select.css
@@ -87,16 +87,17 @@ div.content {
 }
 
 /* staff-tweets */
-img.avatar {
+img.ProfileTweet-avatar {
     width: 30px;
     border-radius: 5px;
 }
 s {
     text-decoration: none;
 }
-.account-group {
+.ProfileTweet-header {
     font-size: x-small;
 }
+/* もはや要らん気がする */
 small.time {
     text-align: right;
     float: right;
@@ -104,7 +105,7 @@ small.time {
     position: relative;
     top: -3px;
 }
-p.tweet-text {
+p.ProfileTweet-text {
     margin: 10px 0;
     padding: 5px;
     background-color: #fff;
@@ -114,7 +115,7 @@ p.tweet-text {
     position: relative;
     box-shadow: 0 2px 2px #ddd;
 }
-p.tweet-text:after {
+p.ProfileTweet-text:after {
     content: "";
     border-right:  7px solid transparent;
     border-bottom: 10px solid #fff;
