--- a/src/css/capture.css
+++ b/src/css/capture.css
@@ -62,3 +62,9 @@ a.tweeted-permalink {
     position: relative;
     padding: 0;
 }
+.tweet-box {
+    color: #444;
+    font-size: 16px;
+    font-family: Arial,"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro",Osaka,"メイリオ",Meiryo,"ＭＳ Ｐゴシック","MS PGothic",sans-serif;
+    line-height: 22px;
+}
