--- a/src/css/proxy2.css
+++ b/src/css/proxy2.css
@@ -7,8 +7,8 @@ html, body {
 }
 
 div#flashWrap {
-    margin 0;
-    padding 0;
+    margin: 0;
+    padding: 0;
 }
 div#spacing_top {
     display: none;
