Add config interface for API

--- a/tpl/settings/checkbox.hbs
+++ b/tpl/settings/checkbox.hbs
@@ -2,7 +2,7 @@
     <td class="title">{{title}}</td>
     <td class="checkbox-container">
         <div>
-            <input type="checkbox" />{{description}}
+            <input type="checkbox" /><span class="description xsmall">{{{description}}}</span>
         </div>
     </td>
 </tr>
