Setting for kancollewidget-kampa-alchemy

--- a/tpl/settings/checkbox.hbs
+++ b/tpl/settings/checkbox.hbs
@@ -1,5 +1,5 @@
 <tr>
-    <td class="title">{{title}}</td>
+    <td class="title">{{{title}}}</td>
     <td class="checkbox-container">
         <div>
             <input type="checkbox" /><span class="description xsmall">{{{description}}}</span>
