デバッグ用のシミュレーターを設定画面に設置

--- a/src/css/entrypoints/options.scss
+++ b/src/css/entrypoints/options.scss
@@ -1,9 +1,13 @@
 @import "../variables.scss";
 
 .container.options {
-  margin: 20px 40px;
+  padding: 20px 40px;
 }
 
 select.form-select {
   -webkit-appearance: none;
+}
+
+.code code {
+  min-height: 120px;
 }
