--- a/src/css/entrypoints/dsnapshot.scss
+++ b/src/css/entrypoints/dsnapshot.scss
@@ -12,26 +12,28 @@ body {
   background-size: contain;
 }
 
-div.container {
-  height:  100%;
-  display: flex;
-  div.cell {
-    height: 100%;
-    display: inline-block;
-    img {
-      height: 100%;
+main#app {
+  width: 100%;
+  height: 100%;
+  div.container {
+    height:  100%;
+    display: flex;
+    flex-direction: column;
+    div.additional-information {
+      font-size: 4vh;
+      color: white;
+      padding: 0 4px;
+      background-color: rgba(0, 0, 0, 0.8);
     }
-  }
-
-  div.additional-information {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    font-size: 4vh;
-    overflow-y: scroll;
-    color: white;
-    padding: 0 4px;
-    background-color: rgba(0, 0, 0, 0.8);
+    div.row {
+      flex: 1;
+      display: flex;
+      div.cell {
+        background-size: contain;
+        background-repeat: no-repeat;
+        flex: 1;
+        height: 100%;
+      }
+    }
   }
 }
