一枚ずつ編成断片を撮影して表示する部分の実装

--- a/src/css/entrypoints/deckcapture.scss
+++ b/src/css/entrypoints/deckcapture.scss
@@ -2,6 +2,10 @@ html, body {
   height: 100%;
 }
 
+#app {
+  height: 100vh;
+}
+
 .container.root, .columns.root {
   height: 100%;
 }
@@ -23,9 +27,10 @@ select.form-select {
     margin-bottom: 8px;
     #preview {
       position: relative;
+      overflow: hidden;
       #preview-mesh {
         position: absolute;
-        background-color: rgba(0, 0, 0, 0.4);
+        box-shadow: 0 0 0 100vmax rgba(0, 0, 20, 0.6);
         border: thin dashed yellow;
       }
     }
@@ -37,5 +42,29 @@ select.form-select {
 
   blockquote {
     margin: 0;
+  }
+
+  .cell {
+    display: flex;
+    .cell-content {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &.focused {
+        cursor: pointer;
+      }
+      i {
+        font-size: xx-large;
+      }
+      span {
+        font-size: x-large;
+        cursor: not-allowed;
+      }
+      &.captured {
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+    }
   }
 }
