--- a/src/css/entrypoints/common.scss
+++ b/src/css/entrypoints/common.scss
@@ -1,5 +1,6 @@
 @import "../variables.scss";
 @import "spectre.css/src/spectre.scss";
+@import "spectre.css/src/spectre-icons.scss";
 
 // Global
 .clickable {
