デザインはわからないけど撮影済み編成断片の破棄機能を実装

--- a/src/css/entrypoints/deckcapture.scss
+++ b/src/css/entrypoints/deckcapture.scss
@@ -64,6 +64,13 @@ select.form-select {
       &.captured {
         background-size: contain;
         background-repeat: no-repeat;
+        i {
+          cursor: pointer;
+          opacity: 0;
+          &:hover {
+            opacity: 1;
+          }
+        }
       }
     }
   }
