--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,2 +1,6 @@
 // spectre.css の colors を overwrite します
 $primary-color: rgba(60, 200, 200, 1);
+
+$mission-color:      #5755d9;
+$recovery-color:     #56c2c1;
+$shipbuilding-color: #fa9836;
