通知詳細設定（アイコンとか通知音とか）のUIを作成
Fix #1011

--- a/src/css/entrypoints/options.scss
+++ b/src/css/entrypoints/options.scss
@@ -15,3 +15,38 @@ select.form-select {
 h1 {
   border-bottom: dotted thin #bfbfbf;
 }
+
+section {
+  margin-bottom: 24px;
+}
+
+section.notification-setting {
+  .notification-kind-setting {
+    margin-bottom: 8px;
+    .kind-label {
+      display: flex;
+      align-items: center;
+    }
+    .icon-preview {
+      background-repeat: no-repeat;
+      background-size: contain;
+      height: 100%;
+      cursor: pointer;
+    }
+    .sound-preview {
+      height: 100%;
+      display: flex;
+      align-items: center;;
+      audio {
+        height: 100%;
+        &:focus {
+          outline: none;
+        }
+      }
+      i.icon {
+        cursor: pointer;
+        margin-left: 8px;
+      }
+    }
+  }
+}
