鎮守府サーバ個別に権限を要求するUIを実装
Related #1072

--- a/src/css/entrypoints/options.scss
+++ b/src/css/entrypoints/options.scss
@@ -18,6 +18,10 @@ h1 {
 
 section {
   margin-bottom: 24px;
+  blockquote.description {
+    margin: 0;
+    font-size: 0.7rem;
+  }
 }
 
 section.notification-setting {
