疲労回復タイマーの表示をダッシュボードに追加

--- a/src/css/entrypoints/dashboard.scss
+++ b/src/css/entrypoints/dashboard.scss
@@ -48,3 +48,14 @@
     }
   }
 }
+.tiredness-bar-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  .tiredness-bar {
+    position: absolute;
+    z-index: -1;
+    height: 6px;
+  }
+}
+
