--- a/src/css/entrypoints/dashboard.scss
+++ b/src/css/entrypoints/dashboard.scss
@@ -5,8 +5,15 @@
   .icon-wrapper {
     width: 120px;
     height: 120px;
-    >img {
-      height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    figure {
+      height: 4.2rem;
+      width: 4.2rem;
+      >img {
+        height: 100%;
+      }
     }
   }
   .clock-wrapper {
@@ -110,3 +117,50 @@
   }
 }
 
+.quest-progress {
+  padding: 8px;
+  .columns {
+    .column {
+      display: flex;
+      align-items: center;
+      &.quest-title {
+        font-size: small;
+      }
+      span.label.label-rounded {
+        font-size: x-small;
+        color: #fff;
+        &.Sortie {
+          background-color: #e85600;
+        }
+        &.Practice {
+          background-color: #32b643;
+        }
+        &.Mission {
+          background-color: $mission-color;
+        }
+        &.Recovery {
+          background-color: $recovery-color;
+        }
+        &.CreateItem, &.Shipbuilding {
+          background-color: $shipbuilding-color;
+        }
+      }
+      span.status.label {
+        font-size: x-small;
+        &.open {
+          background-color: transparent;
+          border: thin solid #d0d0d0;
+          color: #d0d0d0;
+        }
+        &.ongoing {
+          background-color: orange;
+          color: #fff;
+        }
+        &.completed {
+          background-color: $mission-color;
+          color: #fff;
+        }
+      }
+    }
+  }
+}
