--- a/src/css/entrypoints/dashboard.scss
+++ b/src/css/entrypoints/dashboard.scss
@@ -47,8 +47,8 @@
     }
     .modal-footer {
       .btn {
+        margin-left: 6px;
         &.btn-primary {
-          margin-right: 8px;
           &.遠征 {
             background-color: $mission-color;
             border-color: $mission-color;
@@ -62,7 +62,7 @@
             border-color: $shipbuilding-color;
           }
         }
-        &:not(.btn-primary) {
+        &.btn-cancel {
           &.遠征 {
             border-color: $mission-color;
             color: $mission-color;
