疲労タイマーのバーに残り分数を表示
Fix #1089

--- a/src/css/entrypoints/dashboard.scss
+++ b/src/css/entrypoints/dashboard.scss
@@ -110,10 +110,8 @@
   position: relative;
   display: flex;
   align-items: center;
-  .tiredness-bar {
-    position: absolute;
-    z-index: -1;
-    height: 6px;
+  .bar-item {
+    font-size: xx-small;
   }
 }
 
