ダッシュボードに秒表記を追加
Fix #1152

--- a/src/css/entrypoints/dashboard.scss
+++ b/src/css/entrypoints/dashboard.scss
@@ -30,8 +30,12 @@
     .time-wrapper {
       display: flex;
       justify-content: center;
-      span {
+      // TODO: #1150がmergeされたら（.second）はここには要らない
+      div:not(.second)>span {
         font-size: 4em;
+      }
+      div.second {
+        width: 20px;
       }
     }
   }
