ダッシュボード任務一覧にデイリーとウィークリーのフィルター表示を実装

--- a/src/css/entrypoints/dashboard.scss
+++ b/src/css/entrypoints/dashboard.scss
@@ -197,6 +197,15 @@
           @include status-completed();
         }
       }
+      &.btn-filters {
+        .btn-sm {
+          font-size: 0.6rem;
+          &:focus {
+            // outline: none;
+            box-shadow: none;
+          }
+        }
+      }
     }
   }
 }
